[tool.poetry]
name = "sol-check-balance"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sol_check_balance"}]

[tool.poetry.dependencies]
python = "^3.11"
solana = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
